# TherasyncAnalysis

./: README.md  pyproject.toml
config/: config.yaml
scripts/: check_duration_consistency.py
scripts/alliance/: epoch_moi_annotations.py  validate_moi_files.py  visualize_moi_annotations.py
scripts/analysis/: compute_preprocessing_stats.py  count_valid_dyads.py  generate_quality_report.py  investigate_outliers.py  run_alliance_icd_analysis.py
scripts/batch/: generate_moi_sidecars.py  run_all_preprocessing.py  run_all_visualizations.py
scripts/physio/dppa/: analyze_icd_statistics.py  analyze_synchrony.py  batch_generate_animations.py  compute_dppa.py  compute_poincare.py  plot_dyad.py  (+3 more)
scripts/utils/: clean_outputs.py  generate_api_docs.py
scripts/visualization/: generate_visualizations.py
src/: __init__.py
src/alliance/: __init__.py  alliance_icd_analyzer.py  alliance_icd_loader.py  alliance_icd_plotter.py  moi_epocher.py  moi_loader.py  moi_visualizer.py  moi_writer.py
src/core/: __init__.py  bids_utils.py  config_loader.py  logger_setup.py
src/physio/: __init__.py
src/stats/: corrections.py
src/visualization/: __init__.py  config.py  data_loader.py
tests/: test_alliance_icd.py  test_alliance_pipeline.py  test_bvp_frequency_validation.py  test_bvp_pipeline.py  test_dppa.py  test_dppa_animation.py  test_dppa_viz.py  test_eda_pipeline.py  test_epoching.py  test_event_aligned.py  test_generate_epoch_frames_cli.py  test_rr_loader.py  test_rr_synchrony_methods.py  test_stats_corrections.py  test_synchrony.py  test_temp_pipeline.py  test_viz_config.py
(+55 files in other folders)
