[project]
name = "therasyncpipeline"
version = "0.1.0"
description = "A comprehensive pipeline for analyzing physiological data from family therapy sessions"
authors = [
    {name = "Lena Adel", email = "lena.adel@example.com"},
    {name = "Remy Ramadour", email = "remy.ramadour.labs@gmail.com"},
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8,<4.0"
dependencies = [
    # Core scientific computing
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    # Physiological signal processing
    "neurokit2>=0.2.7",
    # Configuration and I/O
    "pyyaml>=6.0",
    "jsonschema>=4.0.0",
    # Plotting and visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    # Parallel processing
    "joblib>=1.1.0",
    # Progress bars
    "tqdm>=4.62.0",
    # Logging enhancements
    "colorlog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.6.0",
    # Code quality
    "ruff>=0.4.0",
    # Documentation
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
